Add in header and footer files during transform

--- a/ht/hallo.html
+++ b/ht/hallo.html
@@ -1,4 +1,23 @@
-<h1>hallo!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Your page title here :)</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<body>
+
+	<h1>hallo!</h1>
 <p>It is I, Ms. Hallo, hallo-ing you!</p>
 <p>In your <em>face</em>! <strong>Boldly</strong>! And then both <em><strong>boldly and emphatically</strong></em>!</p>
 <p>Here's <a href="butts.com" title="a link to butts">a link</a>, too, I guess.</p>
@@ -15,3 +34,6 @@
 <li>bardoo</li>
 </ul>
 <p>Welp, that's all.</p>
+
+</body>
+</html>
