Mess with md and html files

--- a/ht/hallo.html
+++ b/ht/hallo.html
@@ -33,7 +33,10 @@
 <li>fubar</li>
 <li>bardoo</li>
 </ul>
-<p>Welp, that's all.</p>
+<p>Welp, that's all. No, wait! Here's an inline link, to <a href="http://butts.com">http://butts.com</a>!</p>
+<h2>header my header</h2>
+<p>A header test because why not.</p>
+<p>And some more test text, babay!</p>
 
 </body>
 </html>
